--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -4,4 +4,5 @@
 <style>
 body { font-family: 'Tinos', serif; }
 pre { font-family: 'Fira Mono', monospace; }
+code { font-family: 'Fira Mono', monospace; }
 </style>
