--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,8 +1,8 @@
-<link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Tinos&family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
 <style>
 body { font-family: 'Tinos', serif; }
-pre { font-family: 'Fira Mono', monospace; }
-code { font-family: 'Fira Mono', monospace; }
+pre { font-family: 'Ubuntu Mono', monospace; }
+code { font-family: 'Ubuntu Mono', monospace; }
 </style>
