--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -6,3 +6,13 @@ body { font-family: 'Tinos', serif; }
 pre { font-family: 'Ubuntu Mono', monospace; }
 code { font-family: 'Ubuntu Mono', monospace; }
 </style>
+
+<script>
+    MathJax = {
+        tex: {
+            inlineMath: [['$', '$'], ['\\(', '\\)']],
+        }
+    };
+</script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
