Remove MathJax from pages that don't need it

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -7,6 +7,7 @@ pre { font-family: 'Ubuntu Mono', monospace; }
 code { font-family: 'Ubuntu Mono', monospace; }
 </style>
 
+{{ with $.Param "math" -}}
 <script>
     MathJax = {
         tex: {
@@ -16,3 +17,4 @@ code { font-family: 'Ubuntu Mono', monospace; }
 </script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+{{- end }}
