--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,3 +1,5 @@
+<link rel="shortcut icon" href="/favicon.ico">
+
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Tinos&family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
